[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/ui/player_interface/interface.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/buttons/attack_button.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/buttons/jump_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/buttons/jump_button.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/buttons/attack_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/buttons/cave_button.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/buttons/cave_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/player_interface/currency.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/ui/buttons/home_button.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/buttons/pause_button.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/buttons/home_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ui/buttons/reload.png" type="Texture" id=12]
[ext_resource path="res://scenes/ui/player_interface/player_health.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sprites/ui/buttons/rocket_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/ui/buttons/rocket_button.png" type="Texture" id=15]
[ext_resource path="res://assets/audio/sfx/buttons/press.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sprites/ui/buttons/buy_button.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/ui/buttons/buy_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://scripts/ui/player_interface/control_buttons.gd" type="Script" id=19]

[node name="player_ui" type="Control" groups=["interface"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="positionlayer" type="CanvasLayer" parent="."]
visible = false

[node name="money" type="Control" parent="positionlayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="currency" parent="positionlayer/money" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_top = 11.0
margin_right = -240.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="player_health" parent="positionlayer" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="control_buttons" type="Control" parent="positionlayer" groups=["controlButtons"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="jump" type="Control" parent="positionlayer/control_buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -174.0
margin_top = -125.0
margin_right = -78.0
margin_bottom = -29.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="jump" type="TouchScreenButton" parent="positionlayer/control_buttons/jump"]
scale = Vector2( 3, 3 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )
action = "jump"

[node name="attack" type="Control" parent="positionlayer/control_buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -125.0
margin_right = -227.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="attack" type="TouchScreenButton" parent="positionlayer/control_buttons/attack"]
scale = Vector2( 3, 3 )
normal = ExtResource( 2 )
pressed = ExtResource( 5 )
action = "attack"

[node name="skill" type="Control" parent="positionlayer/control_buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -249.0
margin_top = -225.0
margin_right = -209.0
margin_bottom = -185.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="skill" type="TouchScreenButton" parent="positionlayer/control_buttons/skill"]
scale = Vector2( 3, 3 )

[node name="TextureProgress" type="TextureProgress" parent="positionlayer/control_buttons/skill/skill"]
margin_right = 32.0
margin_bottom = 32.0
fill_mode = 5
tint_progress = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="skillCooldown" type="Timer" parent="positionlayer/control_buttons/skill/skill"]
one_shot = true

[node name="skillDuration" type="Timer" parent="positionlayer/control_buttons/skill/skill"]
one_shot = true

[node name="item" type="TouchScreenButton" parent="positionlayer/control_buttons"]
position = Vector2( 625, 375 )
scale = Vector2( 3, 3 )

[node name="TextureProgress" type="TextureProgress" parent="positionlayer/control_buttons/item"]
margin_right = 32.0
margin_bottom = 32.0
fill_mode = 5
tint_under = Color( 0.392157, 0.392157, 0.392157, 1 )
tint_progress = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="gadgetTimer" type="Timer" parent="positionlayer/control_buttons/item"]
one_shot = true

[node name="enter_buttons" type="VBoxContainer" parent="positionlayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -70.0
margin_right = -64.0
margin_bottom = -30.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="enter_cave" type="TouchScreenButton" parent="positionlayer/enter_buttons"]
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
action = "enter_cave"

[node name="return_home" type="TouchScreenButton" parent="positionlayer/enter_buttons"]
position = Vector2( 0, -70 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 11 )
action = "exit_cave"

[node name="spaceship" type="TouchScreenButton" parent="positionlayer/enter_buttons"]
position = Vector2( 0, -35 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 15 )
pressed = ExtResource( 14 )

[node name="buy" type="TouchScreenButton" parent="positionlayer/enter_buttons"]
position = Vector2( 0, -35 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 17 )
pressed = ExtResource( 18 )
action = "buy"

[node name="top_elements_right" type="HBoxContainer" parent="positionlayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.0
margin_top = 10.0
margin_right = -63.0
margin_bottom = 26.0
rect_scale = Vector2( 3, 3 )

[node name="pause" type="TextureButton" parent="positionlayer/top_elements_right"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="positionlayer/top_elements_right/pause"]
pause_mode = 2
stream = ExtResource( 16 )
pitch_scale = 0.5
autoplay = true

[node name="Control" type="Control" parent="positionlayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="positionlayer/Control"]
position = Vector2( -40, 60 )
scale = Vector2( 3, 3 )
normal = ExtResource( 12 )
action = "mb_right"

[connection signal="pressed" from="positionlayer/control_buttons/skill/skill" to="." method="_on_skill_pressed"]
[connection signal="timeout" from="positionlayer/control_buttons/skill/skill/skillCooldown" to="." method="_on_skillCooldown_timeout"]
[connection signal="timeout" from="positionlayer/control_buttons/skill/skill/skillDuration" to="." method="_on_skillDuration_timeout"]
[connection signal="pressed" from="positionlayer/control_buttons/item" to="." method="_on_gadget_pressed"]
[connection signal="pressed" from="positionlayer/enter_buttons/spaceship" to="." method="_on_spaceship_pressed"]
[connection signal="pressed" from="positionlayer/top_elements_right/pause" to="." method="_on_pause_pressed"]
